--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,17 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Code Apprentice
+email: apprentice@codeapprentice.info
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am a professional Software Engineer. I created this blog to report my
+  progress on the #100DaysOfCode challenge. I am using this as an incentive
+  to work on my personal projects. I also plan to continue blogging about
+  other topics of interest as I continue my professional journey.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: codeguru42
+github_username:  codeguru42
 
 # Build settings
 markdown: kramdown
